--- a/Minecraft/Minecraft.vcxproj.filters
+++ b/Minecraft/Minecraft.vcxproj.filters
@@ -28,7 +28,7 @@
     <ClInclude Include="src\Game\Bloks\Grass.h" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="res\shaders\first.vert" />
-    <None Include="res\shaders\first.frag" />
+    <None Include="res\shaders\block.vert" />
+    <None Include="res\shaders\block.frag" />
   </ItemGroup>
 </Project>
