--- a/Minecraft/Minecraft.vcxproj
+++ b/Minecraft/Minecraft.vcxproj
@@ -130,6 +130,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\Render\Camera.cpp" />
     <ClCompile Include="src\Game\Bloks\Grass.cpp" />
     <ClCompile Include="src\Render\Render.cpp" />
     <ClCompile Include="src\Render\Program.cpp" />
@@ -143,6 +144,7 @@
     <ClCompile Include="src\Render\Texture.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\Render\Camera.hpp" />
     <ClInclude Include="src\Game\Bloks\Block.h" />
     <ClInclude Include="src\Game\Bloks\Grass.h" />
     <ClInclude Include="src\Render\RenderObject.h" />
