--- a/Minecraft/Minecraft.vcxproj.filters
+++ b/Minecraft/Minecraft.vcxproj.filters
@@ -13,6 +13,9 @@
     <ClCompile Include="src\Render\Texture.cpp" />
     <ClCompile Include="src\Game\Bloks\Grass.cpp" />
     <ClCompile Include="src\Render\Camera.cpp" />
+    <ClCompile Include="src\Input\InputKeyboard.cpp" />
+    <ClCompile Include="src\Game\Bloks\Dirt.cpp" />
+    <ClCompile Include="src\Game\Bloks\Badapple.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Game\Game.h" />
@@ -27,7 +30,10 @@
     <ClInclude Include="src\Game\Bloks\Block.h" />
     <ClInclude Include="src\Render\Texture.h" />
     <ClInclude Include="src\Game\Bloks\Grass.h" />
-    <ClInclude Include="src\Render\Camera.hpp" />
+    <ClInclude Include="src\Render\Camera.h" />
+    <ClInclude Include="src\Input\InputKeyboard.h" />
+    <ClInclude Include="src\Game\Bloks\Dirt.h" />
+    <ClInclude Include="src\Game\Bloks\Badapple.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="res\shaders\block.vert" />
